# micro_doom_rs

./: Cargo.toml  README.md  map01.txt  map02.txt  map04.txt  maze.txt  test_map.txt
doom_ggez/: Cargo.toml
doom_ggez/src/: main.rs
doom_speedy2d/: Cargo.toml
doom_speedy2d/src/: main.rs
pixels_slow/: Cargo.toml
pixels_slow/src/: bindings.rs  main.rs
shared/: Cargo.toml
shared/src/game/: a3d_to_2d.rs  bsp.rs  cam.rs  colls.rs  contexts.rs  mod.rs  vecs.rs
src/: game.rs  main.rs  vecs.rs
src/game/: a3d_to_2d.rs  array.rs  bsp.rs  cam.rs  colls.rs  draw_screen.rs  drawing.rs  fs.rs  ggez.rs  lines.rs  mod.rs  polygons.rs  skybox.rs  vecs.rs
