[package]
name = "micro_doom_rs"
version = "0.1.0"
edition = "2024"
default-run = "micro_doom_rs"

[dependencies]
mint = "0.5.9"
nalgebra-glm = "0.20.0"
once_cell = "1.21.3"
rand = "0.9.2"
ggez = "0.9.3"
pixels = "0.13"
winit = { version = "0.30", features = ["rwh_05"] }
log = "0.4"
env_logger = "0.10"
winit_input_helper = "0.17.0"
